--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.6" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.6" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.6" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Management.Infrastructure" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.6" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.6" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.PowerShell.5.ReferenceAssemblies" version="1.1.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.112.0" targetFramework="net452" />
   <package id="Tamir.SharpSsh.dll" version="1.1.1.14" targetFramework="net452" />
 </packages>
